# -Linux-course2

./: CMakeLists.txt  build.ninja  rules.ninja
